--- a/comments.html
+++ b/comments.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./test.css">
     <title>Document</title>
 </head>
-<body>
+<body id="mainBody" onload="dropComment()">
     <div class="container" id="container">
         <div class="comment-box">
             <div class="ment-head">
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <button onclick="dropComment()">testing..1,2</button>
+    <!-- <button onclick="dropComment()">testing..1,2</button> -->
    <h1 id="demo"></h1>
    <script src="./test.js">
 
