--- a/comments.html
+++ b/comments.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,33 +8,45 @@
     <link rel="stylesheet" href="./test.css">
     <title>Document</title>
 </head>
-<body id="mainBody" onload="dropComment()">
-    <div class="container" id="container">
-        <div class="comment-box">
-            <div class="ment-head">
-                <img src="./send2.png" alt="">
-                <div>
-                    <h5>EUSTACE DIKE</h5>
-                    <p>@eustacedike</p>
+
+<body onload="dropComment()">
+
+
+    <div id="mainBody">
+        <div class="container" id="container">
+            <div class="comment-box">
+                <div class="ment-head">
+                    <img src="./send2.png" alt="">
+                    <div>
+                        <h5>EUSTACE DIKE</h5>
+                        <p>@eustacedike</p>
+                    </div>
                 </div>
-            </div>
-            <div class="ment-body">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi explicabo dolorem, commodi quisquam atque sequi.</p>
-            </div>
-            <div class="ment-foot">
-                <h6>6 Jul 2022 2:55pm</h6>
-                <div>
-                    <img src="./icons8-thumbs-up-90.png" alt="">
-                    <img src="./icons8-thumbs-down-90.png" alt="">
+                <div class="ment-body">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi explicabo dolorem, commodi
+                        quisquam atque sequi.</p>
+                </div>
+                <div class="ment-foot">
+                    <h6>6 Jul 2022 2:55pm</h6>
+                    <div>
+                        <img src="./icons8-thumbs-up-90.png" alt="">
+                        <img src="./icons8-thumbs-down-90.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- <button onclick="dropComment()">testing..1,2</button> -->
-   <h1 id="demo"></h1>
-   <script src="./test.js">
+        <!-- <button onclick="dropComment()">testing..1,2</button>
+        <h1 id="demo"></h1> -->
+    </div>
+    <div class="landiv">
+    <button class="landed" onclick="landed()">Add a new comment</button>
+    </div>
+    
+    <script src="./test.js">
 
     </script>
+
 </body>
+
 </html>
