--- a/test.html
+++ b/test.html
@@ -19,7 +19,11 @@
         <label for="custom">Choose a file <img src="./icons8-upload-24.png" alt=""></label>
         <input id="custom" type="file" accept="image/*" onchange="limit(this);loadFile(event);"/>
         </div>
+
     </form>
+        <div class="cwai">
+            <button onclick="vieww()">Continue without an Image</button>
+        </div>
 </div>
 
 <div class="view">
@@ -51,7 +55,7 @@
 
         <button onclick="sect()">Submit</button>
     </form> <br>
-    <button onclick="retrieve()">get</button>
+    <!-- <button onclick="retrieve()">get</button> -->
     </div>
 </div>
 <script src="./test.js"></script>
