--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body onload="dropComment()">
 
+    <div class="landiv">
+        <button class="landed" onclick="landed()">Add a new comment</button>
+        </div>
+        
 
     <div id="mainBody">
         <div class="container" id="container">
@@ -39,11 +43,8 @@
         <!-- <button onclick="dropComment()">testing..1,2</button>
         <h1 id="demo"></h1> -->
     </div>
-    <div class="landiv">
-    <button class="landed" onclick="landed()">Add a new comment</button>
-    </div>
     
-    <script src="./test.js">
+    <script src="./app.js">
 
     </script>
 
