partially fixed the duplication of comment boxes on page reload

--- a/details.html
+++ b/details.html
@@ -21,9 +21,10 @@
         </div>
 
     </form>
-        <div class="cwai">
-            <button onclick="vieww()">Continue without an Image</button>
-        </div>
+    <p>Only files below 1MB allowed...</p>
+    <div class="cwai">
+        <button onclick="vieww()">Continue without an Image</button>
+    </div>
 </div>
 
 <div class="view">
